	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r952)
 * _use_mipmaps=2 will compute the mipmaps faster, using every fourth source pixel.
   This can be a good solution for photographs.
# (r948)
 * if configure'ing with --enable-cxx11, background image loading will be available
  (FIXME: need controlling variable, need to handle failed loads)
# (r947)
 * mipmap computing (controlled by _use_mipmaps) is now faster
# (r942)
 * New option configure --with-font-magnifying-factor=FACTOR controls rendering of text
   font magnification. If FACTOR is positive this value will be hardcoded. 
# (r945)
   If FACTOR is negative, the magnification factor in the _fbfont_magnify_factor
   variable will be used, with -FACTOR as default.
   If FACTOR is 0 a default of 1 will apply.
   Option meant to be used with with very high resolutions and small fonts.
 * configure --with-font-magnifying-factor=0 will enable runtime control of the
   text magnification factor via variable _fbfont_magnify_factor .
# (r941)
 * FIXME: description files beginning with "#!fim:desc" (whatever extension) can now
   be detected and loaded as they were normal image files (FIXME: undocumented)
 * FIXME: did something with --enable-unicode ?
# (r936)
 * added --reverse to reverse the file list
# (r933)
 * added --sort-mtime to sort file list according to modification time
 * added --sort-fsize to sort file list according to file size
 * to list command added subcommand 'sort_mtime' to sort file list according to modification time
 * to list command added subcommand 'sort_fsize' to sort file list according to file size
# (r931)
 * added the _lastgotodirection variable, with the last file goto direction
 * key Enter will now mark and then go forward or back according to _lastgotodirection 

                Version 0.5

# (r746*)
 * -R / --recursive switch to turn on recursive push of command line specified directories
# (r669*)