@@ -3,6 +3,8 @@
 
                 Version 0.6-trunk
 
+# (r955)
+  * i:_file_load_time will store the time taken to load the file and decode the image.
 # (r952)
  * _use_mipmaps=2 will compute the mipmaps faster, using every fourth source pixel.
    This can be a good solution for photographs.
